Calculator/Mutants/Mutant_16/report.txt
Mutants\Mutant_16\calculator\ExpressionParser.java:72: error: duplicate case label
            case '+':
            ^
1 error
Compilation Failed, Mutant killed by the compiler
